--- a/public/style.css
+++ b/public/style.css
@@ -1,25 +1,48 @@
 .pagination {
-    display: inline-block;
-    width: 100%;
-  }
+  display: inline-block;
+  width: 100%;
+}
 
-  .pagination a {
-    color: #000;
-    float: right;
-    padding: 8px 16px;
-    text-decoration: none;
-    border-style: groove ;
-    border-width: 1px;
-    background-color: #b7ae89 ;
-  }
+.pagination a {
+  color: #187ce0;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  border-style: groove ;
+  border-width: 1px;
+  background-color: #f4f4b7 ;
+  margin-top : 5px ;
+  margin-right: 5px ;
 
-  .pagination a.active {
-    background-color: #4CAF50;
-    color: white;
-    border-radius: 10px;
-  }
+}
 
-  .pagination a:hover:not(.active) {
-    background-color: #ddd;
-    border-radius: 5px;
+
+.pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+  border-radius: 10px;
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+  border-radius: 5px;
+}
+
+.table{
+  margin-top : 10px ;
+  background: #f4eded ;
   }
+.table h1{
+  font-family : serif ;
+  color : #000 ;
+  width: 100%;
+  font-size:40px;
+  margin-top : 50px ;
+}
+
+.table h2{
+  color : #00bf00 ;
+  width: 100%;
+  font-size:30px;
+}
+
